--- a/package.json
+++ b/package.json
@@ -1,20 +1,37 @@
 {
   "name": "022025_letassurance",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "Email template build process",
+  "main": "gulpfile.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "gulp",
+    "dev": "gulp watch",
+    "image": "gulp compressImg",
+    "verification": "gulp verification"
   },
   "keywords": [],
-  "author": "",
+  "author": "Philippe",
   "license": "ISC",
-  "dependencies": {
+  "devDependencies": {
+    "cheerio": "^1.0.0",
     "gulp": "^5.0.0",
+    "gulp-clean": "^0.4.0",
+    "gulp-filesize": "^0.0.1",
+    "gulp-filter": "^9.0.1",
+    "gulp-htmlhint": "^4.0.2",
+    "gulp-htmlmin": "^5.0.1",
+    "gulp-imagemin": "^6.2.0",
+    "gulp-mjml": "^4.0.2",
     "gulp-pug": "^5.0.0",
     "gulp-rename": "^2.0.0",
-    "live-server": "^1.2.2",
-    "mjml": "^4.15.3",
+    "html-minifier-terser": "^7.2.0",
+    "imagemin-gifsicle": "^5.2.0",
+    "imagemin-mozjpeg": "^7.0.0",
+    "imagemin-optipng": "^5.2.1",
+    "imagemin-svgo": "^11.0.1",
+    "json5": "^2.2.3",
+    "live-server": "^1.2.0",
+    "mjml": "^4.7.1",
     "through2": "^4.0.2"
   }
 }
