ajout des images pour le mobile

--- a/src/includes/dataPartenaires.json5
+++ b/src/includes/dataPartenaires.json5
@@ -55,7 +55,7 @@
   ],
   "logosList4": [      
        {
-            'image':'./images/2m.png',
+            'image':'https://i.ibb.co/C4Rm3Wp/2m.png',
             'alt':'logo 2M votre courtier assurancess'
         },
         {
